objects/Assigned_Sales_Rep__c.object
<CustomObject>
    <description>As a Dealer Sales Manager or above, I shall have the ability to reassign a customer account so that the newly reassigned sales rep can manage the account. This custom object stores the assigned sales rep information tied to a customer account.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assigned Sales Reps</relationshipLabel>
        <relationshipName>Assigned_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DealerBrand__c</fullName>
        <label>Dealer Brand</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Code__c</fullName>
        <defaultValue>$User.Dealer_Code__c</defaultValue>
        <label>Dealer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Management_Group__c</fullName>
        <formula>Sales_Rep__r.Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Management Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_ID__c</fullName>
        <formula>Account__r.Party_ID__c</formula>
        <label>Party ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address__c</fullName>
        <formula>Account__r.BillingStreet &amp; &quot;, &quot; &amp;
Account__r.BillingCity &amp; &quot;, &quot; &amp;
Account__r.BillingState &amp; &quot; &quot; &amp;
Account__r.BillingPostalCode &amp; &quot; &quot; &amp;
Account__r.BillingCountry</formula>
        <label>Primary Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <formula>Sales_Rep__r.FirstName+&apos; &apos;+ Sales_Rep__r.LastName</formula>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4 AND 5)</booleanFilter>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>contains</operation>
                <value>Partner User</value>
            </filterItems>
            <filterItems>
                <field>$User.LastName</field>
                <operation>equals</operation>
                <valueField>User.LastName</valueField>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>PowerPartner</value>
            </filterItems>
            <filterItems>
                <field>$UserRole.Name</field>
                <operation>notContain</operation>
                <value>Partner User</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scout_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Scout External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isBrand__c</fullName>
        <formula>TEXT($User.Dealer_Brand__c) = DealerBrand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isBrand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDealerCode__c</fullName>
        <formula>$User.Dealer_Code__c = Dealer_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isDealerCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExecutiveGroup__c</fullName>
        <formula>CONTAINS( $User.Executive_group__c ,  Dealer_Code__c )</formula>
        <label>isExecutiveGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMyASR__c</fullName>
        <formula>$User.Id = OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isMyASR</label>
        <type>Checkbox</type>
    </fields>
    <label>Assigned Sales Rep</label>
    <listViews>
        <fullName>My_Assigned_Accounts</fullName>
        <columns>Account__c</columns>
        <columns>Party_ID__c</columns>
        <columns>Primary_Address__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>isDealerCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Assigned Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Assigned_Accounts</fullName>
        <columns>Account__c</columns>
        <columns>Party_ID__c</columns>
        <columns>Primary_Address__c</columns>
        <columns>Sales_Rep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>isDealerCode__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Sales_Rep__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>My Team&apos;s Assigned Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>Dealer_Sales_Executives</group>
            <group>Dealer_Sales_Managers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ASR-{00000}</displayFormat>
        <label>ASR#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Sales Reps</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>